[gd_scene load_steps=14 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/Inventory.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/images/left-arm.png" type="Texture" id=4]
[ext_resource path="res://player/images/right arm.png" type="Texture" id=5]
[ext_resource path="res://player/images/beams.png" type="Texture" id=6]
[ext_resource path="res://player/images/body.png" type="Texture" id=7]
[ext_resource path="res://player/animations/float.tres" type="Animation" id=8]
[ext_resource path="res://player/animations/flying.tres" type="Animation" id=9]

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Character:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 20.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character/rightArm:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 26.0889 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character/beams:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -217.128, 263.923 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "dashing"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Character/beams:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -217.128, 263.923 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Character/leftArm:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Character/leftArm:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 10.0, 7.0, 10.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Character/rightArm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 10.0, 26.0889, 10.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Character/beams:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 15.0, 14.0003, 15.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Character:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 30.0, 0.0, 30.0 ]
}

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 10, 5.125 )

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 15, 24 )

[sub_resource type="CircleShape2D" id=25]
radius = 55.0091

[node name="SkeletalPlayer" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 379.019 ]
}

[node name="Inventory" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 27 )
anims/dashing = SubResource( 28 )
anims/float = ExtResource( 8 )
anims/flying = ExtResource( 9 )

[node name="Character" type="Sprite" parent="."]
position = Vector2( 0, -25 )
rotation = 0.349066
scale = Vector2( 0.025, 0.025 )

[node name="leftArm" type="Sprite" parent="Character"]
rotation = 0.174533
texture = ExtResource( 5 )

[node name="beams" type="Sprite" parent="Character"]
position = Vector2( -217.128, 263.923 )
rotation = 0.261799
texture = ExtResource( 6 )

[node name="body" type="Sprite" parent="Character"]
texture = ExtResource( 7 )

[node name="rightArm" type="Sprite" parent="Character"]
position = Vector2( -80, 0 )
rotation = 0.455338
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13.125 )
shape = SubResource( 24 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -47 )
current = true
zoom = Vector2( 0.75, 0.75 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.05
drag_margin_top = 0.05
drag_margin_right = 0.05
drag_margin_bottom = 0.05

[node name="CheckForRock" type="Area2D" parent="." groups=["playercheck"]]
visible = false
position = Vector2( 0, -5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckForRock"]
position = Vector2( 0, -25 )
shape = SubResource( 26 )

[node name="CheckForDoor" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckForDoor"]
position = Vector2( 0, -15 )
shape = SubResource( 25 )

[connection signal="body_entered" from="CheckForRock" to="." method="_on_CheckForDoor_body_entered"]
[connection signal="body_exited" from="CheckForRock" to="." method="_on_CheckForDoor_body_exited"]
[connection signal="area_entered" from="CheckForDoor" to="." method="_on_CheckForDoor_area_entered"]
[connection signal="area_exited" from="CheckForDoor" to="." method="_on_CheckForDoor_area_exited"]
[connection signal="body_entered" from="CheckForDoor" to="." method="_on_CheckForDoor_body_entered"]
[connection signal="body_exited" from="CheckForDoor" to="." method="_on_CheckForDoor_body_exited"]
